--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser-dynamic": "^10.1.6",
     "@angular/platform-server": "^10.1.6",
     "@angular/router": "^10.1.6",
+    "@angular/service-worker": "^10.1.6",
     "@nguniversal/express-engine": "^10.1.0",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
