--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
     "typescript": "~4.0.5"
+  },
+  "engines": {
+    "node": "^16.0.0"
   }
 }
